--- a/act1.html
+++ b/act1.html
@@ -20,12 +20,23 @@
         div.spacer {
             height: 2000px;
         }
+        div.sticky{
+            background-color: magenta;
+            position: sticky;
+            top: 100px;
+            padding: 20px;
+            height: 50px;
+            max-width: fit-content;
+            border: 2px solid brown;
+        }
     </style>
 </head>
 
 <body>
     <h1>CSS position</h1>
     <div class="fixed">Fixed position</div>
+    <div class="spacer"></div>
+    <div class="sticky">i will stick it near the top</div>
     <div class="spacer"></div>
 </body>
 
