--- a/act1.html
+++ b/act1.html
@@ -44,6 +44,18 @@
             left: 40px;
             right: 40px;
         }
+        .parent{
+            position: relative;
+            height: 200px;
+            border: 2px dotted black;
+            margin-top: 50px;
+        }
+        .absolute{
+            background-color: purple;
+            position: absolute;
+            right: 20px;
+            bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +65,10 @@
     <div class="spacer"></div>
     <div class="sticky">i will stick it near the top</div>
     <div class="spacer"></div>
+    <div class="parent">
+    <div class="box absolute"></div>
+    </div>
+    <div class="spacer">absolute</div>
 </body>
 
 </html>
